Bug 91544 - Loop and freeze in Data sources (open bibliography -> Tables -> biblio)
Summary: Loop and freeze in Data sources (open bibliography -> Tables -> biblio)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2015-05-23 19:21 UTC by raal
Modified: 2016-10-25 19:17 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (23.38 KB, text/x-log)
2015-05-23 19:21 UTC, raal
Details
strace log in Linux (54.59 KB, text/plain)
2015-05-24 08:26 UTC, Edmund Laugasson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2015-05-23 19:21:02 UTC
Created attachment 115911 [details]
backtrace

steps
open Calc
F4 (or View - Data sources)
open bibliography -> Tables -> biblio
Crash

or 
open Calc
F4 (or View - Data sources)
open "My own data source - ods file"
click in the data table
F4
Crash



Version: 5.1.0.0.alpha1+
Build ID: e929194317a7debb1c5467282230cbbabe61a710
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-05-22_06:33:18
Comment 1 Michael 2015-05-23 20:10:15 UTC
Confirmed the first part (Tables->biblio), bibisect follows

$ git bisect log
# bad: [c0fbc9b85ec523099dceb0f4f778fb10042efbd7] 2015-05-19: source-hash-158b50763962f66515062300e265839828463efa
# good: [06421cdb5e5880c2f8232a04f521a341edf08de3] 2015-04-29: source-hash-2932d2db599c09ecce3faa2d627e9ee4f251183a
git bisect start 'c0fbc9b85ec523099dceb0f4f778fb10042efbd7' '06421cdb5e5880c2f8232a04f521a341edf08de3'
# good: [3e7dc65db19f2643a69dc6d7928ed18c4780e6cd] 2015-05-09: source-hash-4048311aae6993357c2d0be1f1968a8c57dd4e85
git bisect good 3e7dc65db19f2643a69dc6d7928ed18c4780e6cd
# good: [0cedadc7b2e8c75bf0893100e8fae49f62cc2545] 2015-05-14: source-hash-9de1d53a2ce3ee7036b4688b373db7b2235af4d9
git bisect good 0cedadc7b2e8c75bf0893100e8fae49f62cc2545
# good: [fc72f553942f05f27b235b481af97652d7ccbcb5] 2015-05-16: source-hash-9d0c51daea67104349cac26de9839afa8baeb099
git bisect good fc72f553942f05f27b235b481af97652d7ccbcb5
# good: [2cbed1a28f1051db3368577637b7dc871a0d0079] 2015-05-18: source-hash-2ca7795a6a723c701f295323fcc3f6c52ad37976
git bisect good 2cbed1a28f1051db3368577637b7dc871a0d0079
# first bad commit: [c0fbc9b85ec523099dceb0f4f778fb10042efbd7] 2015-05-19: source-hash-158b50763962f66515062300e265839828463efa
Comment 2 MM 2015-05-24 00:02:47 UTC
Unconfirmed with v5.0.0.0 b1 under mint 17.1 x64.
Unconfirmed with v5.0.0.0 b1 under ubuntu 14.04 x64.

No crashes on both systems, but the data is refreshed constantly, very rapidly. This makes calc slow and unusable and can't be closed the normal way. Only a forced quit helps.
Comment 3 Edmund Laugasson 2015-05-24 08:26:00 UTC
Created attachment 115956 [details]
strace log in Linux

Using 64-bit Linux Mint Cinnamon 17.1 with 4.0.4-040004-generic kernel
LibreOffice version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale: et-EE (et_EE.UTF-8)


I confirm the problem - Writer will hung and working impossible. No crashes but the data is refreshed constantly, very rapidly. This makes Writer slow and unusable and can't be closed the normal way. Only a forced quit helps.
Comment 4 Edmund Laugasson 2015-05-24 08:48:24 UTC
There is also another crash related with the Bibliography Database - Bug 91570
Comment 5 raal 2015-05-24 10:25:07 UTC
(In reply to Edmund Laugasson from comment #4)
> There is also another crash related with the Bibliography Database - Bug
> 91570

It's my second case.
open Calc
F4 (or View - Data sources)
open "My own data source - ods file"
click in the data table
F4
Crash
Comment 6 Julien Nabet 2015-05-24 15:41:30 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce a crash but I can't see the content of the records in biblio, it seems it never stops to load.
Anyway, seeing the bt, I put this one to blocker of tdf#91310.
Comment 7 Michael Meeks 2015-05-25 20:36:09 UTC
Thanks for the report; my expectation is that this is fixed by:

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0792e97bd7ea6f23c908bdebc4826b08c6265d55

I'd be interested to know if a more recent build with that in it still has this problem; thanks !
Comment 8 László Németh 2015-05-26 14:27:57 UTC
Unfortunatelly, up-to-date master still has this problem (freezing with constant refresh).
Comment 9 raal 2015-05-26 15:57:15 UTC
(In reply to raal from comment #0)
> Created attachment 115911 [details]
> backtrace
> 
> steps
> open Calc
> F4 (or View - Data sources)
> open bibliography -> Tables -> biblio
> 

Loop and freeze. Not fixed

> 
> or 
> open Calc
> F4 (or View - Data sources)
> open "My own data source - ods file"
> click in the data table
> F4
> Crash
> 
> 
fixed with Version: 5.1.0.0.alpha1+
Build ID: b9630867d17c01ec41f6461b1e96288f3932248c
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-05-25_00:46:48
Comment 10 Michael Meeks 2015-05-26 20:33:11 UTC
Turns out not to be a VclPtr regression - constant re-rendering is a RenderContext one. Tomaz - Laszlo is working on fixing this one, so CC'd JFYI etc. =) Clearly doing an Invalidate in a path from Paint is not ideal.
Comment 11 Commit Notification 2015-05-27 12:34:20 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=77c47fc79c1c8096c19a81a0d320e75b84857144

tdf#91544: fix freezing of Data source window

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 László Németh 2015-05-27 12:59:44 UTC
Freezing is fixed in the master, but not the following inherited invalidation/repainting problem of the Data sources window. Summary for a new bug report:

- jumping in the next row overdraw all texts in the other rows, resulting false bold text (also in LO 3.6)

New repainting problems:

- pressing PgUp/PgDown can result overdrawn cells
- jumping in empty cells can show false selected cell content (content of other cells in the same column, eg. in Chapter and Edition fields in the Bibliography database)

Tomaž, I have fixed the freezing at this code part:

commit 29b1e6718f6ebdb45d2a8c6a89a86bc0a6bbb3ae
Author: Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>
Date:   Wed May 6 15:49:16 2015 +0900

    refactor "TextEdit" & co. to use RenderContext
    
    Change-Id: Ib26ecb9640d23714acec73304f26e2fd6af90ed4

diff --git a/vcl/source/edit/texteng.cxx b/vcl/source/edit/texteng.cxx
index e5a3c84..7311148 100644
--- a/vcl/source/edit/texteng.cxx
+++ b/vcl/source/edit/texteng.cxx
@@ -1499,10 +1499,7 @@ void TextEngine::UpdateViews( TextView* pCurView )
                 aNewPos.X() -= aOutSz.Width() - 1;
             aClipRect.SetPos( aNewPos );
 
-            if ( pView == pCurView )
-                pView->ImpPaint( aClipRect, !pView->GetWindow()->IsPaintTransparent() );
-            else
-                pView->GetWindow()->Invalidate( aClipRect );
+            pView->GetWindow()->Invalidate( aClipRect );
         }
     }
Comment 13 Julien Nabet 2015-05-28 05:30:28 UTC
On pc Debian x86-64 with master sources udpated yesterday, be01d68420086fc36ecf26b5f597ba7c6b29b369, I don't reproduce this.

Thank you for the fix! :-)
Comment 14 László Németh 2015-06-01 15:17:15 UTC
> - jumping in empty cells can show false selected cell content (content of other cells in the same column, eg. in Chapter and Edition fields in the Bibliography database)

Sorry, this is not a new problem caused by the fix for this bug, also libreOffice-5-0 has got it.

(In reply to Julien Nabet from comment #13)
> Thank you for the fix! :-)

Thanks for your help and feedback. :)
Comment 15 Commit Notification 2015-07-14 01:08:27 UTC
Marek Doležel committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0bd582834b46dbbc5037310d45bac8885e6f2a07

tdf#92582 Revert "tdf#91544: fix freezing of Data source window"

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Robinson Tryon (qubit) 2015-12-17 09:12:24 UTC Comment hidden (obsolete)