tdf#91544: fix freezing of Data source window

Change-Id: Ia445bedd57d99c534c9664a42fcb9cd766fcdc39